--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+    <meta name='impact-site-verification' value='e68acefd-5d87-4c05-abc1-ef8003611eed'>
     <meta charset="utf-8">
     <title>Watevent</title>
     <meta name="theme-color" content="#7b1fa2">
