--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Watevent</title>
     <meta name="theme-color" content="#7b1fa2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Stay in the loop!">
+    <meta name="description" content="Largest selection of events">
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/home.css">
     <link rel="shortcut icon" href="./files/goose-transparent.png">
@@ -40,11 +40,11 @@
 
             <div class="download-buttons">
                 <a class="download-button"
-                    href="https://apps.apple.com/ie/app/rizzer-now-youll-know-them/id6444730312">
+                    href="https://apps.apple.com/us/app/watevent-local-fun-events/id6475428219">
                     <img src="./files/app_store.png" alt="Download on the App Store">
                 </a>
                 <a class="download-button"
-                    href="">
+                    href="https://play.google.com/store/apps/details?id=com.ariwasch.watevent">
                     <img src="./files/google_play.png" alt="Get it on Google Play">
                 </a>
             </div>
@@ -52,9 +52,9 @@
         </div>
         <div class="column previews">
             <div class="preview iphone_x">
-                <!-- <img class="frame" src="./files/iphone_x.png">
-                <img class="screenshot" src="./files/example2.png"> -->
-                <img class="frame" src="./files/phone-waterloo.png">
+                <img class="frame" src="./files/iphone_x.png">
+                <img class="screenshot" src="IMG_0295.jpeg">
+                <!-- <img class="frame" src="./files/phone-waterloo.png"> -->
 
             </div>
             <!-- <div class="preview pixel">
