--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h1 class="increase">Watevent</h1>
 
 
-            <h1>Stay in the loop!</h1></br>
+            <h1>Largest selection of Local Fun & Live Events</h1></br>
 
             <!-- <h2>Location/Topic based chat rooms!</h2></br> -->
 
@@ -48,6 +48,15 @@
                     <img src="./files/google_play.png" alt="Get it on Google Play">
                 </a>
             </div>
+            <div class="download-buttons">
+                <a href="https://www.producthunt.com/posts/watevent?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-watevent" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=456192&theme=light" alt="Watevent - Largest&#0032;selection&#0032;of&#0032;Local&#0032;Fun&#0032;&#0038;&#0032;Live&#0032;Events | Product Hunt" style="width: 250px; height: 54px;" width="250" height="54" /></a>
+
+            </div><!-- Button HTML with inline styles -->
+            <div class="download-buttons">
+
+            <a href="https://watevent.com" class="continue-btn">Continue on Web</a>
+
+        </div><!-- Button HTML with inline styles -->
 
         </div>
         <div class="column previews">
