--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Watevent">
     <meta name="twitter:description" content="Stay in the loop!">
-    <meta name="twitter:image" content="./files/goose-transparent.png">
+    <meta name="twitter:image" content="./files/goose.png">
     <!-- Other platform preview -->
     <meta property="og:url" content="https://comethru.io">
     <meta property="og:title" content="Watevent">
     <meta property="og:description" content="Stay in the loop!">
-    <meta property="og:image" content="./files/goose-transparent.png">
+    <meta property="og:image" content="./files/goose.png">
 
 
 </head>
