--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Largest selection of events">
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/home.css">
-    <link rel="shortcut icon" href="./files/goose-transparent.png">
+    <link rel="shortcut icon" href="./files/goose.png">
     <!-- Twitter preview -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Watevent">
@@ -66,10 +66,10 @@
                 <!-- <img class="frame" src="./files/phone-waterloo.png"> -->
 
             </div>
-            <!-- <div class="preview pixel">
+            <div class="preview pixel">
                 <img class="frame" src="./files/pixel.png">
-                <img class="screenshot" src="./files/example1.png">
-            </div> -->
+                <img class="screenshot" src="other-image.png">
+            </div>
         </div>
     </div>
     <footer>
