--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>Watevent</title>
     <meta name="theme-color" content="#7b1fa2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Largest selection of events">
+    <meta name="description" content="Largest selection of Local Fun & Live Events">
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/home.css">
     <link rel="shortcut icon" href="./files/goose.png">
     <!-- Twitter preview -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Watevent">
-    <meta name="twitter:description" content="Stay in the loop!">
+    <meta name="twitter:description" content="Largest selection of Local Fun & Live Events">
     <meta name="twitter:image" content="./files/goose.png">
     <!-- Other platform preview -->
-    <meta property="og:url" content="https://comethru.io">
+    <meta property="og:url" content="https://info.watevent.com">
     <meta property="og:title" content="Watevent">
-    <meta property="og:description" content="Stay in the loop!">
+    <meta property="og:description" content="Largest selection of Local Fun & Live Events">
     <meta property="og:image" content="./files/goose.png">
 
 
