--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta property="og:title" content="Watevent">
     <meta property="og:description" content="Largest selection of Local Fun & Live Events">
     <meta property="og:image" content="./files/goose.png">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
 </head>
