--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0DVPY4SN"></script> 
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QJ0DVPY4SN'); </script>
     <meta name='impact-site-verification' value='e68acefd-5d87-4c05-abc1-ef8003611eed'>
     <meta charset="utf-8">
-    <title>Watevent</title>
+    <title> WatEvents – Explore Amazing Events Nearby </title>
     <meta name="theme-color" content="#7b1fa2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Largest selection of Local Fun & Live Events">
+    <meta name="description" content="Discover exciting local events with Watevent! From concerts to festivals, find what's happening near you. Stay updated and never miss out on the fun!">
+    <link rel="canonical" href="https://info.watevent.com"/>
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/home.css">
     <link rel="shortcut icon" href="./files/goose.png">
@@ -55,7 +59,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-        <a href="#intro" class="scrollto"><img src="./files/goose-transparent.png" alt="" title=""></a>
+        <a href="https://info.watevent.com" class="scrollto"><img src="./files/goose-transparent.png" alt="" title=""></a>
       </div>
 
       <nav id="nav-menu-container">
