--- a/about.html
+++ b/about.html
@@ -3,12 +3,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0DVPY4SN"></script> 
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QJ0DVPY4SN'); </script>
     <meta name='impact-site-verification' value='e68acefd-5d87-4c05-abc1-ef8003611eed'>
     <meta charset="utf-8">
-    <title>Watevent - About Us </title>
+    <title> About Us - WatEvents </title>
     <meta name="theme-color" content="#7b1fa2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Largest selection of Local Fun & Live Events">
+    <meta name="description" content="Struggling to find local events? Watevent's FREE event website & app aggregates events across cities. Discover music, festivals & more - all in one place!">
+    <link rel="canonical" href="https://watevent.com/about-us" />
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/home.css">
     <link rel="shortcut icon" href="./files/goose.png">
@@ -54,7 +58,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li><a href="index.html">Home</a></li>
-          <li class="menu-active"><a href="about.html">About</a></li>
+          <li class="menu-active"><a href="https://watevent.com/about-us">About</a></li>
           <li><a href="our-services.html">Our Services</a></li>
           <li><a href="https://watevent.com">Categories</a></li>
           <li><a href="contact.html">Contact</a></li>
