--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Google tag (gtag.js) --> 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0DVPY4SN"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QJ0DVPY4SN'); </script>
+    <meta name="google-site-verification" content="RraF0HKoKMhdGo-46lXgnCprrAvxvPjVj7Q5tMD-jMw" />
     <meta name='impact-site-verification' value='e68acefd-5d87-4c05-abc1-ef8003611eed'>
     <meta charset="utf-8">
     <title> WatEvents – Explore Amazing Events Nearby </title>
