--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,15 @@
 
 <head>
     <!-- Google tag (gtag.js) --> 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0DVPY4SN"></script> 
-  <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QJ0DVPY4SN'); </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0DVPY4SN"></script> 
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QJ0DVPY4SN'); </script>
     <meta name='impact-site-verification' value='e68acefd-5d87-4c05-abc1-ef8003611eed'>
     <meta charset="utf-8">
-    <title>Watevent -  Contact Us</title>
+    <title> Contact Us – WatEvent </title>
     <meta name="theme-color" content="#7b1fa2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Largest selection of Local Fun & Live Events">
+    <meta name="description" content=": Get in touch with us at Watevent for event inquiries, support, and more. We're here to help and answer your questions!">
+    <link rel="canonical" href=" https://info.watevent.com/contact.html" />
     <link rel="stylesheet" href="./files/style.css">
     <link rel="stylesheet" href="./files/home.css">
     <link rel="shortcut icon" href="./files/goose.png">
@@ -27,8 +28,6 @@
     <meta property="og:image" content="./files/goose.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-
-
     <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -40,13 +39,9 @@
 
   <!-- Main Stylesheet File -->
   <link href="files/style.css" rel="stylesheet">
-
-
-
 </head>
 
 <body>
-
     <header id="header">
     <div class="container">
 
