--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <h1 class="increase">Watevent</h1>
 
 
-            <h1 style="color: white; text-align: center;">Largest selection of Local Fun & Live Events</h1></br>
+            <h2 style="color: white; text-align: center;">Largest selection of Local Fun & Live Events</h2></br>
 
             <!-- <h2>Location/Topic based chat rooms!</h2></br> -->
 
@@ -136,7 +136,7 @@
     <section id="speakers-details" class="wow fadeIn">
       <div class="container">
         <div class="section-header">
-          <h2>About Us - Watevent</h2>
+          <h2>About Us - WATEVENT</h2>
         </div>
 
         <div class="row">
@@ -146,10 +146,13 @@
 
           <div class="col-md-6">
             <div class="details">
-              <p>Struggling to find local events? Watevent's FREE event website & app aggregates events across cities. Discover music, festivals & more - all in one place! </p>
+              <p>Struggling to find local events? Watevent's FREE event website & app aggregates events & listings across cities. Discover music, festivals & more - all in one place!</p>
               <br>
               <h3> Our Story </h3>
-              <p>Welcome to Watevent! I'm Ari Wasch, the founder of Watevent. After moving between various cities, I found it challenging to keep up with interesting events due to the multitude of websites and platforms available. This inspired me to create Watevent, a platform designed to streamline the event discovery process by bringing all local events into one convenient event listing app.</p><br>
+              <p> Welcome to Watevent! I'm Ari Wasch, the founder of Watevent. After moving between various cities, I found it challenging to keep up with interesting events due to the multitude of websites and platforms available. 
+                  This inspired me to create Watevent, a platform designed to streamline the event discovery process by bringing all local events into one convenient event listing app.<br>
+              Watevent is an events calendar website that offers users the ability to search, filter, and bookmark events and receive notifications when an event is nearby. Watevent is not just like other event listing websites; 
+                  we also feature reviews and ratings so users can make informed decisions about which events to attend. Our goal is to make event discovery easier and more enjoyable. Also, if you're looking to add future events & listings you would like everyone else to know about, you can create an event for free now!</p> <br>
 
               <a href="about.html"> <button class="button"> Read more  </button> </a>
             </div>
@@ -172,12 +175,15 @@
         <div class="row">
           <div class="col-lg-6 col-md-6">
             <h2>Our Mission</h2>
-            <p> Our mission is to simplify the process of discovering local events, creating a seamless and engaging experience for our users. We aim to foster connections within communities by making it easier for people to find and participate in events that interest them through our event website and event listing app. </p>
+            <p> Our mission is to simplify the process of discovering local events, creating a seamless and engaging experience for our users. We strive to be the go-to platform for finding things to do in your neighborhood. We are committed to providing users with up-to-date information on local events and a personalized experience.<br>
+            We are constantly innovating our platform to ensure our users have access to the best possible experience. We strive to create a sense of community, allowing users to connect and discover exciting events.
+            </p>
           </div> 
 
           <div class="col-lg-6 col-md-6">
             <h2>Our Vision</h2>
-            <p> We envision a world where discovering and participating in local events is effortless and enjoyable. As we expand, our goal is to reach more cities, helping more people connect with their communities and enrich their lives through engaging activities. This vision will be achieved through our user-friendly event website and our comprehensive event listing app. </p>
+            <p> We envision a world where discovering and participating in local events is effortless and enjoyable. As we expand, our goal is to reach more cities. We want to help more people connect with their communities and enrich their lives through engaging activities through our events calendar. By providing a platform to find local events, we hope to foster community and bring people together.<br>
+            It is our goal to facilitate the discovery of new activities and experiences sharing among people. By building a network of passionate individuals in our local communities, we aim to strengthen our organization. This vision will be achieved through our user-friendly events & listings website and app. </p>
           </div>
         </div>
       </div>
@@ -191,35 +197,47 @@
       <div class="container">
         <div class="section-header">
           <h2>What We Provide</h2>
-          <p>Watevent is dedicated to bringing you the largest selection of local events in one convenient event listing app. Our services include:</p>
+          <p> Watevent is dedicated to bringing you the largest selection of local events in one convenient events & listings app. Our services include: </p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <div class="details">
               <h3> Event Aggregation:  </h3>
-              <p>We gather event information from a wide range of city-related websites and social media platforms to provide you with the most comprehensive event & listings.</p>
+              <p> We gather event information from a wide range of city-related websites and social media platforms to provide you with the most comprehensive event & listings. Our team manually checks each event to ensure accuracy and completeness.
+              <br>
+                This ensures that you have the most up-to-date event information. We also regularly add new events and listings to our website, so you always have the latest information.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="details">
               <h3> Daily Updates:  </h3>
-              <p>Our database is updated daily to ensure you have access to the latest events on our event website and event listing app.</p>
+              <p> Our database is updated daily to ensure you have access to the latest events on our event website and event listing app. This ensures that you have the latest information at your fingertips and that you never miss out on any important events.
+              <br>
+                  We also provide detailed event descriptions and photos to help you make an informed decision. Finally, we also offer exclusive discounts to some of our events.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="details">
               <h3> Advanced Search and Filters: </h3>
-              <p>Easily find events that match your interests with our intuitive search and filter options on our user-friendly event website and event listing app.</p>
+              <p> Easily find events that match your interests with our intuitive search and filter options on our user-friendly event website and event listing app. Filter by date, location, topic, and more to find the right event for you.
+              <br>
+                  Use our real-time event search and update your search filters to find your perfect event. Sign up to receive email alerts when new events matching your search criteria become available.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-6">
             <div class="details">
               <h3> User-Friendly Interface:  </h3>
-              <p> Enjoy a smooth and responsive browsing experience, designed to make discovering events effortless on our event website and event listing app.</p>
+              <p> Enjoy a smooth and responsive browsing experience designed to make discovering events effortless on our event website and event listing app. Our user-friendly design makes finding events easy and intuitive.
+              <br>
+                  Our streamlined interface allows users to quickly search for and filter events by category, location, and other criteria. We also provide helpful features like event countdowns and interactive maps.
+              </p>
             </div>
           </div>
           
@@ -248,28 +266,34 @@
             <div class="row schedule-item">
               <div class="col-md-12">
                 <h4>Data Collection:</h4>
-                <p>Watevent continuously scans and compiles event information from various city-related websites and social media platforms.</p>
+                <p> Watevent continuously scans and compiles event information from various city-related websites and social media platforms.
+                <br>
+                    The data is analyzed and used to detect trends in the city's event landscape. This helps Watevent provide better services to its users. The data collected will also be used to improve event marketing strategies.
+                </p>
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-12">
                 <h4>Event Curation: </h4>
-                <p>Our team curates and organizes the collected data, ensuring it is accurate and up-to-date for our event website and event listing app.</p>
+                <p> Our team curates and organizes the collected data, ensuring it is accurate and up-to-date for our event website and event listing app.
+                <br>
+                    We manage the event database, ensuring no information is missing or outdated. We also ensure all event details are correctly represented and event information is presented in an easy-to-navigate format. Lastly, we regularly review the event database to ensure accuracy.
+                </p>
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-12">
                 <h4>User Access: </h4>
-                <p>Through our app, users can browse, search, and filter events based on their interests and preferences.</p>
+                <p> Through our app, users can browse, search, and filter events based on their interests and preferences. They can also create a personalized calendar to track upcoming events. The app also allows them to join and create groups, share events, and receive notifications about upcoming events. </p>
               </div>
             </div>
 
             <div class="row schedule-item">
               <div class="col-md-12">
                 <h4>Stay Informed: </h4>
-                <p>Users receive real-time updates on events, ensuring they never miss out on exciting activities in their city through our event website and event listing app.</p>
+                <p> Users receive real-time updates on events, ensuring they never miss out on exciting activities in their city through our event website and event listing app. Our apps allow users to filter events by category, location, and date. They can also save events to their calendar and share them with friends and family. Our platform also provides users with reviews and ratings to help them make informed decisions. </p>
               </div>
             </div>
 
