--- a/about.html
+++ b/about.html
@@ -137,10 +137,17 @@
           <div class="col-md-6">
             <div class="details">
               <h3> Our Story </h3>
-              <p>Welcome to Watevent! I'm Ari Wasch, the founder of Watevent. After moving between various cities, I found it challenging to keep up with interesting events due to the multitude of websites and platforms available. This inspired me to create Watevent, a platform designed to streamline the event discovery process by bringing all local events into one convenient event listing app.</p><br>
+              <p> Welcome to Watevent! I'm Ari Wasch, the founder of Watevent. With so many event listing websites and platforms available, it became difficult for me to keep up with interesting events & listings. In order to simplify the event discovery process, I created Watevent, a free event website and app where you can make an event for free. It also brings together all local events in one convenient location.
+              <br> Watevent allows users to search for events by category, date, location, and more. We also have a feature that will enable users to save events to their events calendar so they can always stay up to date on the latest events. Watevent is the one-stop destination for all things event-related! Watevent also allows users to share events & listings with friends and create personalized lists. In addition, users can access event ratings and reviews, making it easier to find the right event for them.
+              </p>
+                <br>
 
               <h3> What We Do </h3>
-              <p>Watevent is a free event listing website which uses advanced technology to aggregate local events across multiple cities, ensuring you never miss out on activities around you. We continuously compile event information from a wide range of city-related websites and social media platforms. Whether you’re interested in music, festivals, workshops, or community gatherings, Watevent has something for everyone. Our event website is completely free to use, making it accessible for all.</p>
+              <p> Watevent aggregates local events across multiple cities using advanced technology, ensuring you don't miss out on any activities around you. Every day, we systematically compile information about city-related events from social media and city-related websites. Whatever your taste in music, festivals, workshops, or community gatherings, Watevent has something for you. Our free event website is accessible to everyone.
+              <br> You can always count on us to provide you with the latest information about local events so you never miss out on any fun or interesting activities happening around the area. Our aggregation technology lets you keep up to date with the latest events happening in your city at all times with our aggregation technology.
+              <br> Our advanced technology uses algorithms to systematically collect and compile information about city-related events from various sources, including social media and city-related websites. This allows us to create a comprehensive database of events & listings, ensuring users have access to a wide range of activities in their area.
+              <br> With our aggregation technology, you can always rely on us to provide you with the most up-to-date information about local events, helping you stay connected to your community and never miss out on exciting opportunities.
+              </p>
               
             </div>
           </div>
@@ -163,13 +170,16 @@
         <div class="row">
           <div class="col-lg">
             <h2>Our Mission</h2>
-            <p> Our mission is to simplify the process of discovering local events, creating a seamless and engaging experience for our users. We aim to foster connections within communities by making it easier for people to find and participate in events that interest them through our event website and event listing app.</p>
+            <p> Our mission is to simplify the process of discovering local events, creating a seamless and engaging experience for our users. We aim to foster connections within communities by making it easier for people to find and participate in events that interest them through our event website and events & listings app.
+            <br> Using our platform, users can find events based on their interests, location, or category. Users can also book tickets, receive event reminders, and read event reviews as part of our event journey planning features. Everyone should be able to discover events easily and enjoyably.
+            <br> We strive to create seamless and intuitive experiences. We want our users to be able to find nearby events or local events quickly and easily. We want to create a platform that provides the best event experience.
+            </p>
             <br>
-            <h4 style="color: white">Key Features</h4>
+            <h3 style="color: white">Key Features</h3>
             <ul>
-              <li>Extensive Selection of Local Events: Curated daily to bring you the best events in your area.</li>
-              <li>Advanced Filtering and Search: Easily find events that match your interests with our intuitive search and filter options.</li>
-              <li>User-Friendly Interface: Designed for effortless browsing and discovery.</li>
+              <li> We have a huge selection of local events. We curate the best events in your area every day and provide you with the most information possible. </li>
+              <li> Easily find events that match your interests with our intuitive search and filter features if you want to filter and search for events that match your interests. </li>
+              <li> A simple and user-friendly interface: Designed to allow users to browse and discover the content with ease. </li>
             </ul>
           </div>
         </div>
@@ -193,7 +203,10 @@
           <div class="col-md-6">
             <div class="details">
               <h2> Our Vission </h2>
-              <p>We envision a world where discovering and participating in local events is effortless and enjoyable. As we expand, our goal is to reach more cities, helping more people connect with their communities and enrich their lives through engaging activities. This vision will be achieved through our user-friendly event website and our comprehensive event listing app.</p><br>
+              <p> We envision a world where discovering and participating in local events is effortless and enjoyable. As we expand, our goal is to reach more cities, helping more people connect with their communities and enrich their lives through engaging activities. This vision will be achieved through our user-friendly event website and comprehensive event listing app.
+              <br> We strive to make the event search process as straightforward as possible, allowing users to find and book events quickly and easily. We want to empower people to explore events and activities that interest them and create meaningful connections with their communities.
+              <br> It is our goal to create a platform that is easy to use and open to everyone. By providing a platform where users can find information about events and activities, we want to make planning easier for them. Users should be able to connect meaningfully with their communities through an engaging experience.
+              </p>
             </div>
           </div>
         </div>
@@ -242,8 +255,8 @@
 
           <div class="col-lg-4 col-md-6 footer-info">
             <img class="logo" src="./files/goose-transparent.png" alt="logo" style="height: 100px">
-            <h1>Watevent</h1>
-            <p>Largest selection of Local Fun & Live Events</p>
+            <h2> Watevent </h2>
+            <p> Largest selection of local fun & live events Find local events in your area, including concerts, festivals, comedy shows, and more. Easily search for events based on location, date, and type of event. Find the perfect event for you!  </p>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-links">
