--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) --> 
+    <!-- Google tag (gtag.js) -->
+    <meta charset="utf-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0DVPY4SN"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QJ0DVPY4SN'); </script>
     <meta name="google-site-verification" content="RraF0HKoKMhdGo-46lXgnCprrAvxvPjVj7Q5tMD-jMw" />
     <meta name='impact-site-verification' value='e68acefd-5d87-4c05-abc1-ef8003611eed'>
-    <meta charset="utf-8">
     <title> WatEvents – Explore Amazing Events Nearby </title>
     <meta name="theme-color" content="#7b1fa2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -51,7 +51,6 @@
   </style>
 
 </head>
-
 <body>
 
     <header id="header">
@@ -113,14 +112,14 @@
         </div>
         <div class="column previews">
             <div class="preview iphone_x">
-                <img class="frame" src="./files/iphone_x.png">
-                <img class="screenshot" src="IMG_0295.jpeg">
+                <img class="frame" src="./files/iphone_x.png" alt="frame">
+                <img class="screenshot" src="IMG_0295.jpeg" alt="iphone">
                 <!-- <img class="frame" src="./files/phone-waterloo.png"> -->
 
             </div>
             <div class="preview pixel">
-                <img class="frame" src="./files/pixel.png">
-                <img class="screenshot" src="other-image.png">
+                <img class="frame" src="./files/pixel.png" alt="frame">
+                <img class="screenshot" src="other-image.png" alt="iphone">
             </div>
         </div>
     </div>
@@ -324,7 +323,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/gallery/1.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/1.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/1.jpg" alt="img1" class="img-fluid">
               </a>
             </div>
           </div>
@@ -332,7 +331,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/gallery/2.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/2.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/2.jpg" alt="img2" class="img-fluid">
               </a>
             </div>
           </div>
@@ -340,7 +339,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/gallery/3.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/3.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/3.jpg" alt="img3" class="img-fluid">
               </a>
             </div>
           </div>
@@ -348,7 +347,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/gallery/4.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/4.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/4.jpg" alt="img4" class="img-fluid">
               </a>
             </div>
           </div>
@@ -356,7 +355,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/gallery/5.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/5.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/5.jpg" alt="img5" class="img-fluid">
               </a>
             </div>
           </div>
@@ -364,7 +363,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/gallery/6.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/6.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/6.jpg" alt="img6" class="img-fluid">
               </a>
             </div>
           </div>
@@ -372,7 +371,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="img/gallery/7.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/7.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/7.jpg" alt="img7" class="img-fluid">
               </a>
             </div>
           </div>
@@ -380,7 +379,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="imggallery/8.jpg" class="venobox" data-gall="venue-gallery">
-                <img src="img/gallery/8.jpg" alt="" class="img-fluid">
+                <img src="img/gallery/8.jpg" alt="img8" class="img-fluid">
               </a>
             </div>
           </div>
@@ -389,11 +388,6 @@
       </div>
 
     </section>
-
-   
-   
-
-   
 
     <!--==========================
       Subscribe Section
