--- a/about.html
+++ b/about.html
@@ -4,10 +4,10 @@
 
 <head>
     <!-- Google tag (gtag.js) --> 
+    <meta charset="utf-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QJ0DVPY4SN"></script> 
     <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-QJ0DVPY4SN'); </script>
     <meta name='impact-site-verification' value='e68acefd-5d87-4c05-abc1-ef8003611eed'>
-    <meta charset="utf-8">
     <title> About Us - WatEvents </title>
     <meta name="theme-color" content="#7b1fa2">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,8 +28,6 @@
     <meta property="og:image" content="./files/goose.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-
-
     <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -43,7 +41,6 @@
   <link href="files/style.css" rel="stylesheet">
 
 </head>
-
 <body>
 
     <header id="header">
@@ -105,14 +102,14 @@
         </div>
         <div class="column previews">
             <div class="preview iphone_x">
-                <img class="frame" src="./files/iphone_x.png">
-                <img class="screenshot" src="IMG_0295.jpeg">
+                <img class="frame" src="./files/iphone_x.png" alt="frame">
+                <img class="screenshot" src="IMG_0295.jpeg" alt="iphone">
                 <!-- <img class="frame" src="./files/phone-waterloo.png"> -->
 
             </div>
             <div class="preview pixel">
-                <img class="frame" src="./files/pixel.png">
-                <img class="screenshot" src="other-image.png">
+                <img class="frame" src="./files/pixel.png" alt="frame">
+                <img class="screenshot" src="other-image.png" alt="iphone">
             </div>
         </div>
     </div>
